--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,26 +51,56 @@ body {
     align-items: center;
     color: $--header-color;
     font-family: $--main-font;
+    position: relative;
+}
+
+.attribution { 
+    position: absolute;
+    bottom: 80px;
+    left: 600px;
 }
 
 .card { 
-    border-radius: 30px;
-    background-color: $--dark-blue;
-    
-    display: flex; 
-    flex-direction: column;
-    
     width:330px;
     height: 325px;
 
-    padding: 10px 25px;
     margin-bottom: 20px;
 
+    position: relative;
+
     &__rate { 
-        
+        border-radius: 30px;
+
+        position: absolute;
+
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        z-index: 1;
+        
+        width: 100%;
+        height: 100%;
+        padding: 20px 20px;
+
+        background-color: $--dark-blue;
+    }
+
+
+   &__thankyou { 
+        border-radius: 30px;
+
+        position: absolute;
+
+        z-index: 2;
+
+        width: 100%;
+        height: 100%;
+        padding: 20px 20px;
+        
+        background-color: $--dark-blue;
+        
+        
     }
 }
 
@@ -143,6 +173,7 @@ body {
 
     &__submit { 
         border-radius: 50px;
+        border: transparent;
 
         padding: 10px 10px;
 
