--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -92,7 +92,7 @@ body {
 
         position: absolute;
 
-        z-index: 2;
+        
 
         width: 100%;
         height: 100%;
@@ -100,9 +100,10 @@ body {
         
         background-color: $--dark-blue;
 
-        display: none;
+        
         flex-direction: column;
         align-items: center;
+
         
 
         &--img { 
@@ -244,5 +245,14 @@ body {
 }
 
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { font-size: 11px; text-align: center;  }
+.attribution a { color: hsl(228, 45%, 44%); position: relative;}
+
+#home__website { 
+    width: 25px;
+    position: absolute;
+    
+
+    bottom: -2px;
+    left: 5px;
+}
